modules/cli/src/test/resources/good/misc/globals/gdo/Do11.scr
module good.misc.globals.gdo.Do11;


global protocol Do11(role A, role B)
{
	/*choice at A  // Uncomment (with below) is bad
	{*/
		do Do11Aux1<l1()>(A, B);
	/*}
	or
	{
		l1() from A to B;
	}*/
}

global protocol Do11Aux1<sig X>(role C, role D)
{
	do Do11Aux2<X>(C, D);
}

global protocol Do11Aux2<sig X>(role E, role F)
{
	X from E to F;
}

